--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,8 @@ environment:
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
 # dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
+# the latest version availabel on pub.dev. To see which dependencies have newer
+# versions availabel, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
@@ -50,9 +50,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^20.3.58
   flutter_polyline_points: ^1.0.0
   google_maps_flutter: ^2.2.1
-  location: ^4.4.0
   flutter_svg: ^1.1.6
-  geocoding: ^2.0.5
   flutter_riverpod: ^2.1.1
   csc_picker: ^0.2.6
   url_launcher: ^6.1.7
@@ -62,14 +60,13 @@ dependencies:
   get: ^4.6.5
   animations: ^2.0.7
   page_transition: ^2.0.9
+  geolocator: ^9.0.2
+  map_launcher: ^2.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.11.0
-
- 
-
 flutter_icons:
   android: "launcher_icon"
   ios: true
