--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -32,6 +32,12 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>This app requires access to the photo library.</string>
+	<key>NSCameraUsageDescription</key>
+    <string>This app requires access to the Camera</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app requires access to the microphone</string>
     <key>LSApplicationQueriesSchemes</key>
     <array>
 	<string>sms</string>
