--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   page_transition: ^2.0.9
   geolocator: ^9.0.2
   map_launcher: ^2.4.0
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
