--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ dependencies:
   geolocator: ^9.0.2
   map_launcher: ^2.4.0
   image_picker: ^0.8.6
+  flutter_widget_from_html: ^0.9.0+2
+  file_picker: ^5.2.4
+  
+  
 
 dev_dependencies:
   flutter_test:
