--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,8 +64,10 @@ dependencies:
   map_launcher: ^2.4.0
   image_picker: ^0.8.6
   flutter_widget_from_html: ^0.9.0+2
-  file_picker: ^5.2.4
   geocoding: ^2.0.5
+  path_provider: ^2.0.11
+  open_file: ^3.2.1
+  file_picker: ^4.6.1
   
   
 
