--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "prettier.proseWrap": "always",
     "prettier.quoteProps": "consistent",
-    "prettier.requireConfig": true
+    "prettier.requireConfig": true,
+    "editor.fontLigatures": false,
+    "editor.fontVariations": false,
+    "editor.fontFamily": "Cascadia Code "
 }
